# CNN

./: .gitignore  README.md  dataset_index.jsonl  pyproject.toml  requirements.txt
scripts/: cpu_smoketest.py  run_paper_pipeline.py
src/engagement_pipeline/: __init__.py  bundle.py  cli.py  cnn.py  data_index.py  experiments.py  frame_sampling.py  fusion.py  openface.py  path_utils.py  training.py  visualization.py
